
Enum user_role {
  maker
  buyer
  admin
}

Enum product_approval_status {
  pending
  approved
  rejected
}

Enum order_status {
  pending_payment
  paid
  in_production
  shipped
  completed
  cancelled
}

Enum complexity_level {
  low
  medium
  high
}

Enum durability_level {
  low
  medium
  high
}

Enum credit_reason_type {
  topup
  adjustment
  purchase
  refund
}

Enum notification_type {
  new_order
  product_review
  maker_review
  status_changed
}

Enum report_status {
  open
  in_review
  resolved
}

/************************************************************
* USERS & ROLES
************************************************************/

Table users {
  id                  serial       [pk]
  role                user_role    [not null, default: 'buyer'] // ipv aparte roles-tabel
  username            varchar(100) [not null, unique]
  email               varchar(255) [not null, unique]
  password       varchar(255) [not null]
  credit_balance      numeric(10,2) [not null, default: 0]
  is_blocked          boolean      [not null, default: false]
  is_deleted          boolean      [not null, default: false]
  created_at          timestamptz  [not null, default: `now()`]
  updated_at          timestamptz  [not null, default: `now()`]

  Note: 'Elke user heeft precies één rol: maker, buyer of admin'
}

/************************************************************
* PRODUCTS
************************************************************/

Table product_types {
  id          serial       [pk]
  name        varchar(100) [not null, unique]
  description text
}

Table products {
  id                     serial       [pk]
  maker_id               int          [not null] // users.role = maker
  product_type_id        int          [not null]

  name                   varchar(255) [not null]
  slug                   varchar(255) [unique]   // voor SEO / nette URLs (optioneel)
  description            text         [not null]

  material               varchar(255) [not null]
  production_time_days   int          [not null, note: 'Geschatte doorlooptijd']
  complexity             complexity_level [not null]
  durability             durability_level [not null]
  unique_feature         text         [not null]

  price_credit           numeric(10,2) [not null]

  approval_status        product_approval_status [not null, default: 'pending']
  approved_by_admin_id   int
  approved_at            timestamptz
  rejection_reason       text

  has_external_link      boolean      [not null, default: false]
  needs_moderation       boolean      [not null, default: false]
  is_active              boolean      [not null, default: true]
  is_deleted             boolean      [not null, default: false]

  average_rating         numeric(3,2) // denormalized veld voor performance (0–5)
  review_count           int          [not null, default: 0]

  created_at             timestamptz  [not null, default: `now()`]
  updated_at             timestamptz  [not null, default: `now()`]

  indexes {
    (maker_id)
    (product_type_id)
    (approval_status)
    (is_active, is_deleted)
  }
}

Table product_admin_action_logs {
  id             serial       [pk]
  product_id     int          [not null]
  admin_user_id  int
  product_name   varchar(255) [not null]
  action_type    varchar(30)  [not null]
  created_at     timestamptz  [not null, default: `now()`]

  indexes {
    (product_id)
    (admin_user_id)
    (action_type)
  }

  Note: 'Audit log for admin moderation actions on products'
}

/************************************************************
* ORDERS
************************************************************/

Table orders {
  id             serial       [pk]
  buyer_id       int          [not null] // users.role = buyer
  product_id     int          [not null]
  maker_id       int          [not null] // users.role = maker

  status         order_status [not null, default: 'pending_payment']
  status_note    text

  price_credit   numeric(10,2) [not null]

  created_at     timestamptz   [not null, default: `now()`]
  updated_at     timestamptz   [not null, default: `now()`]

  indexes {
    (buyer_id)
    (maker_id)
    (product_id)
    (status)
  }

  Note: 'maker_id en product_id worden vastgelegd om latere wijzigingen aan het product niet te laten doorwerken in oude orders'
}

/************************************************************
* REVIEWS
************************************************************/

Table product_reviews {
  id           serial      [pk]
  order_id     int         [not null]
  product_id   int         [not null]
  buyer_id     int         [not null]
  rating       int         [not null, note: '1–5']
  comment      text        [not null]
  created_at   timestamptz [not null, default: `now()`]

  indexes {
    (order_id, buyer_id) [unique]
    (product_id)
  }

  Note: 'Alleen toegestaan na status = shipped/completed, max 1 product review per order per buyer'
}

Table maker_reviews {
  id           serial      [pk]
  order_id     int         [not null]
  maker_id     int         [not null]
  buyer_id     int         [not null]
  rating       int         [not null, note: '1–5']
  comment      text        [not null]
  created_at   timestamptz [not null, default: `now()`]

  indexes {
    (order_id, buyer_id) [unique]
    (maker_id)
  }

  Note: 'Review voor de maker, niet voor een specifiek product'
}

/************************************************************
* CREDIT / TRANSACTIONS
************************************************************/

Table credit_transactions {
  id                  serial        [pk]
  from_user_id        int           // null = systeem/admin top-up
  to_user_id          int           // null = systeem
  amount              numeric(10,2) [not null]
  reason_type         credit_reason_type [not null]
  order_id            int
  created_by_admin_id int           // bij admin-acties
  note                text
  created_at          timestamptz   [not null, default: `now()`]

  indexes {
    (from_user_id)
    (to_user_id)
    (order_id)
    (reason_type)
  }

  Note: 'Use database transaction + row-level lock bij updaten van credit_balance om race conditions te voorkomen'
}

/************************************************************
* NOTIFICATIONS
************************************************************/

Table notifications {
  id                serial            [pk]
  user_id           int               [not null]
  type              notification_type [not null]
  message           text              [not null]
  related_order_id  int
  related_product_id int
  is_read           boolean           [not null, default: false]
  created_at        timestamptz       [not null, default: `now()`]

  indexes {
    (user_id, is_read)
    (related_order_id)
    (related_product_id)
  }
}

/************************************************************
* REPORTS
************************************************************/

Table product_reports {
  id                  serial       [pk]
  product_id          int          [not null]
  reported_by_user_id int          [not null]
  reason              text
  status              report_status [not null, default: 'open']
  created_at          timestamptz   [not null, default: `now()`]

  indexes {
    (product_id)
    (status)
  }
}

/************************************************************
* RELATIONS
************************************************************/

Ref: products.maker_id           > users.id
Ref: products.product_type_id    > product_types.id
Ref: products.approved_by_admin_id > users.id

Ref: orders.buyer_id             > users.id
Ref: orders.product_id           > products.id
Ref: orders.maker_id             > users.id

Ref: product_reviews.order_id    > orders.id
Ref: product_reviews.product_id  > products.id
Ref: product_reviews.buyer_id    > users.id

Ref: maker_reviews.order_id      > orders.id
Ref: maker_reviews.maker_id      > users.id
Ref: maker_reviews.buyer_id      > users.id

Ref: credit_transactions.from_user_id        > users.id
Ref: credit_transactions.to_user_id          > users.id
Ref: credit_transactions.order_id            > orders.id
Ref: credit_transactions.created_by_admin_id > users.id

Ref: notifications.user_id           > users.id
Ref: notifications.related_order_id  > orders.id
Ref: notifications.related_product_id > products.id

Ref: product_reports.product_id          > products.id
Ref: product_reports.reported_by_user_id > users.id

Ref: product_admin_action_logs.product_id > products.id
Ref: product_admin_action_logs.admin_user_id > users.id
